Thu Aug 12 00:33:58 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* Makefile.PL: Bump config file version.

	* setup/ask_basic.pl: Pretty up questions by adding some headers
 	and reorganizing a bit.

	* setup/setup_func.pl (do_default_config): Substitute confirm_url
 	setting into default configurations.

Wed Aug 11 21:40:32 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/ask_basic.pl (ask_basic): Ask about URL to get to CGIs.

	* lib/Mj/SubscriberList.pm: Added id, remind and expires fields.

Sat Aug  7 11:04:17 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* setup/ask_domain.pl (ask_domain): Typo $fg -> $cfg.

Tue Aug  3 00:02:19 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Resend.pm (_post): Rename _subject_prefix to
 	_munge_subject to reflect better what it will eventually do.

Mon Aug  2 19:20:18 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Digest.pm (trigger): Initialize digest state to sane
 	values if necessary.

	* lib/Majordomo.pm (reject): Don't clobber the given token string
 	if it doesn't turn out to be a real token.
	(_showtokens): Call get_done when finished enumerating the tokens.

	* lib/Mj/Token.pm (t_recognize): Don't return the random value in
 	$1 if the string doesn't look like a token.

	* lib/Mj/SimpleDB/DB.pm: Create and destroy the database on _every
 	call_ to get rid of concurrency problems.

Sat Jul 31 00:07:25 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_xform_array): Add 'equate domain1 and
 	domain2' syntax to addr_xforms.

	* lib/Mj/Access.pm (_d_post): Deal with list:auxlist syntax in
 	restrict_post.

Fri Jul 30 17:35:03 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (parse_restrict_post): Remove ':' as a possible
 	separator.

	* lib/Majordomo.pm (_fill_lists): Make return value a little more
 	meaningful.

Tue Jul 27 00:53:35 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>
