@@ -134,7 +134,7 @@ $Mj::Config::default_string = q(
  'taboo_body'           => $list eq 'GLOBAL' ? [] : [],
  'override_reply_to'    => 0,
  'comments'             => [],
- 'addr_xforms'          => [],
+ 'addr_xforms'          => ['DEFAULT'],
  'apply_global_xforms'  => 1,
  'master_password'      => $list eq 'GLOBAL' ? 'DEFAULT' : "$list.pass",
  'passwords'            => [],
